--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -7,39 +7,47 @@ slug: /
 
 ## Helium Documentation
 
-Helium is global, distributed network of Miners that create public, long-range wireless coverage for LoRaWAN-enabled IoT devices. Miners produce and are compensated in $HNT, the native cryptocurrency of the Helium blockchain. The Helium blockchain is a new, open source, public blockchain created entirely to incentivize the creation of physical, decentralized wireless networks.  Today, the Helium blockchain, and it thousands of miners, provide access to the largest, public LoRaWAN Network in the world.
+Helium is global, distributed network of Miners that create public, long-range
+wireless coverage for LoRaWAN-enabled IoT devices. Miners produce and are
+compensated in $HNT, the native cryptocurrency of the Helium blockchain. The
+Helium blockchain is a new, open source, public blockchain created entirely to
+incentivize the creation of physical, decentralized wireless networks. Today,
+the Helium blockchain, and it thousands of miners, provide access to the
+largest, public LoRaWAN Network in the world.
 
-This documentation provides details on the technology that underpins Helium, as well as how to mine HNT, and how to deploy IoT devices that use the Helium Network. Start your journey below. If, at any time, you don't find what you need, join us in [discord.gg/helium](https://discorg.gg/helium). 
+This documentation provides details on the technology that underpins Helium, as
+well as how to mine HNT, and how to deploy IoT devices that use the Helium
+Network. Start your journey below. If, at any time, you don't find what you
+need, join us in [discord.gg/helium](https://discorg.gg/helium).
 
 Thanks for being a part of Helium.
 
-###  Helium Blockchain
+### Helium Blockchain
 
-* Blockchain Primitives
-* Mining $HNT
-* Proof of Coverage
-* Consensus Protocol
-* The Helium Token
-* Transaction Fees
+- Blockchain Primitives
+- Mining $HNT
+- Proof of Coverage
+- Consensus Protocol
+- The Helium Token
+- Transaction Fees
 
 ### Mine $HNT
 
-* What is a Helium Miner?
-* Prebuilt Helium Miners
-* Build Your Own Helium Miner
-* Convert a LoRaWAN Gateway
- 
-### Use the Helium Network 
+- What is a Helium Miner?
+- Prebuilt Helium Miners
+- Build Your Own Helium Miner
+- Convert a LoRaWAN Gateway
 
-* Ready to Use Devices
-* Development Devices 
-* Helium Console
-* Network Servers 
+### Use the Helium Network
+
+- Ready to Use Devices
+- Development Devices
+- Helium Console
+- Network Servers
 
 ### Community and Governance
 
-* Helium Improvement Proposals
-* Discord and other Chat Platforms
-* Social Media
-* Contribute to Helium 
-
+- Helium Improvement Proposals
+- Discord and other Chat Platforms
+- Social Media
+- Contribute to Helium
