--- a/docs/projects/industrial/industrial.mdx
+++ b/docs/projects/industrial/industrial.mdx
@@ -7,11 +7,35 @@ slug: /projects/industrial
 
 ## Industrial
 
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/karl-schleicher/detecting-natural-gas-emissions-f18385/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/karl-schleicher/detecting-natural-gas-emissions-f18385/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/mohammedfulail/dam-monitoring-with-b-l072z-lorawan-d3c100/embed' width='350'></iframe>
-<div/>
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/itronics/taara-saving-lives-0d2009/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/mohammedfulail/dam-monitoring-with-b-l072z-lorawan-d3c100/embed"
+  width="350"
+></iframe>
+<div />
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/itronics/taara-saving-lives-0d2009/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/Scythe/autonomous-cooling-tower-a-c-t-7075a6/embed' width='350'></iframe>
-<div/>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/Scythe/autonomous-cooling-tower-a-c-t-7075a6/embed"
+  width="350"
+></iframe>
+<div />
