--- a/docs/projects/tracking/tracking.mdx
+++ b/docs/projects/tracking/tracking.mdx
@@ -7,13 +7,43 @@ slug: /projects/tracking
 
 ## Tracking
 
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/evan-diewald/gps-tracking-with-helium-developer-kit-and-cayenne-e43326/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/evan-diewald/gps-tracking-with-helium-developer-kit-and-cayenne-e43326/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/tkartcpr/explore-unlimited-tracker-for-the-explorers-394adf/embed' width='350'></iframe>
-<div/>
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/346322/loradog-026fd7/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/tkartcpr/explore-unlimited-tracker-for-the-explorers-394adf/embed"
+  width="350"
+></iframe>
+<div />
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/346322/loradog-026fd7/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/abouhatab/helium-bloun-will-also-find-your-missing-dog-22c356/embed' width='350'></iframe>
-<div/>
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/ashokr/helium-lora-mapper-12221d/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/abouhatab/helium-bloun-will-also-find-your-missing-dog-22c356/embed"
+  width="350"
+></iframe>
+<div />
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/ashokr/helium-lora-mapper-12221d/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
