--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -6,9 +6,11 @@ slug: /use-the-network/devices
 ---
 
 ## Helium Devices
-### Find ready to use devices or learn how to develop your own. 
 
-The Helium network supports any LoRaWAN capable device meeting the [v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
+### Find ready to use devices or learn how to develop your own.
+
+The Helium network supports any LoRaWAN capable device meeting the
+[v1.0.2 specification](https://lora-alliance.org/sites/default/files/2018-05/lorawan1_0_2-20161012_1398_1.pdf).
 
 ### [Ready to Use Devices][devices.ready-to-use]
 
@@ -16,9 +18,3 @@ The Helium network supports any LoRaWAN capable device meeting the [v1.0.2 speci
 
 [devices.ready-to-use]: /docs/use-the-network/devices/ready-to-use
 [devices.development]: /docs/use-the-network/devices/development
-
-
-
-
-
-
