--- a/docs/projects/dashboards/dashboards.mdx
+++ b/docs/projects/dashboards/dashboards.mdx
@@ -7,7 +7,19 @@ slug: /projects/dashboards
 
 ## Dashboards
 
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/mariacarlinahernandez/connect-a-rak7204-to-helium-and-forward-its-data-to-ubidots-073793/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/mariacarlinahernandez/connect-a-rak7204-to-helium-and-forward-its-data-to-ubidots-073793/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/evan-diewald/routing-sensor-data-from-helium-devices-to-google-sheets-285699/embed' width='350'></iframe>
-<div/>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/evan-diewald/routing-sensor-data-from-helium-devices-to-google-sheets-285699/embed"
+  width="350"
+></iframe>
+<div />
