--- a/docs/projects/misc/misc.mdx
+++ b/docs/projects/misc/misc.mdx
@@ -7,5 +7,11 @@ slug: /projects/misc
 
 ## Misc
 
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/abouhatab/where-do-sparkies-come-from-the-lora-prequel-4fd660/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/abouhatab/where-do-sparkies-come-from-the-lora-prequel-4fd660/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
