--- a/docs/projects/security/security.mdx
+++ b/docs/projects/security/security.mdx
@@ -7,5 +7,11 @@ slug: /projects/security
 
 ## Security
 
-<iframe frameborder='0' height='400' scrolling='no' src='https://www.hackster.io/leroy2le/rv-security-protection-via-the-helium-network-5ca636/embed' width='350'></iframe>
+<iframe
+  frameborder="0"
+  height="400"
+  scrolling="no"
+  src="https://www.hackster.io/leroy2le/rv-security-protection-via-the-helium-network-5ca636/embed"
+  width="350"
+></iframe>
 &nbsp;&nbsp;&nbsp;
