--- a/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device.mdx
+++ b/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device.mdx
@@ -4,15 +4,22 @@ hide_title: true
 sidebar_label: Adeunis Field Test Device
 slug: /use-the-network/devices/ready-to-use/adeunis-field-test-device
 ---
-import useBaseUrl from '@docusaurus/useBaseUrl';
+
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## Adeunis Field Test Device
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/adeunis-field-test-device.png')}/>
+<img
+  src={useBaseUrl(
+    "img/use-the-network/devices/ready-to-use/adeunis-field-test-device.png"
+  )}
+/>
 
 ### Introduction
 
-The Adeunis Field Test Device \(ARF8124A\) is a great tool for network testing. It allows you to rapidly test network coverage at specific geographical positions to verify that devices will have coverage. 
+The Adeunis Field Test Device \(ARF8124A\) is a great tool for network testing.
+It allows you to rapidly test network coverage at specific geographical
+positions to verify that devices will have coverage.
 
 ### Resources
 
@@ -24,23 +31,34 @@ The Adeunis Field Test Device \(ARF8124A\) is a great tool for network testing. 
 
 ### Add Device to Console
 
-To start, you'll need to add your device to Console. You should have been provided with a DevEUI, AppEUI, and AppKey from the seller of the device.
-[//]: # Follow our quickstart for instructions on how to add a new device to Console.
+To start, you'll need to add your device to Console. You should have been
+provided with a DevEUI, AppEUI, and AppKey from the seller of the device.
+[//]: # Follow our quickstart for instructions on how to add a new device to
+Console.
 
 ### Device Configuration
 
-The following device configuration changes are required for the device to function properly on the Helium Network. Although the Adeunis IoT Configurator application makes the device configuration much easier, it does not allow you to change all the required settings, so we must use a serial utility. We are using Realterm for our serial utility, but any will work, just be sure to use the correct serial settings and send the commands in the correct format.
+The following device configuration changes are required for the device to
+function properly on the Helium Network. Although the Adeunis IoT Configurator
+application makes the device configuration much easier, it does not allow you to
+change all the required settings, so we must use a serial utility. We are using
+Realterm for our serial utility, but any will work, just be sure to use the
+correct serial settings and send the commands in the correct format.
 
 [Realterm - Serial Utility](https://sourceforge.net/projects/realterm/)
 
 #### Serial Settings
 
-* Rate 115 200 bps
-* Parity None
-* Data 8
-* Stop Bit 1
+- Rate 115 200 bps
+- Parity None
+- Data 8
+- Stop Bit 1
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/realterm-settings.png')}/>
+<img
+  src={useBaseUrl(
+    "img/use-the-network/devices/ready-to-use/realterm-settings.png"
+  )}
+/>
 
 #### Activate Command Mode
 
@@ -48,15 +66,20 @@ Only this command requires that you send the command in number form.
 
 Enter Command Mode Command: `0xFF 0xFF 0xFF 0x2B 0x2B 0x2B`
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/send-button.png')}/>
+<img
+  src={useBaseUrl("img/use-the-network/devices/ready-to-use/send-button.png")}
+/>
 
 #### Unblock Operating Range
 
 Command: `ATT63 PROVIDER`
 
-This command and all that follow should be sent using the ASCII format with a carriage return\(CR\) at the end.
+This command and all that follow should be sent using the ASCII format with a
+carriage return\(CR\) at the end.
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/send-ascii.png')}/>
+<img
+  src={useBaseUrl("img/use-the-network/devices/ready-to-use/send-ascii.png")}
+/>
 
 #### Select Sub band 2
 
@@ -86,18 +109,29 @@ Read Value Command: `ATS380?`
 
 Command: `AT&W`
 
-#### Exit Command View 
+#### Exit Command View
 
 Command: `ATO`
 
-You should see the following responses below from the device after entering the above commands.
+You should see the following responses below from the device after entering the
+above commands.
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/realterm-at-commands.png')}/>
+<img
+  src={useBaseUrl(
+    "img/use-the-network/devices/ready-to-use/realterm-at-commands.png"
+  )}
+/>
 
 ### Sending Packets
 
-After exiting command mode and on every power on, the device will immediately attempt to join the network. You will the status of the join attempt on the Uplink/Downlink screen, please see the manual for more details on this screen. Once the device has joined press the large push button in the center of the device to send the uplink payload.
+After exiting command mode and on every power on, the device will immediately
+attempt to join the network. You will the status of the join attempt on the
+Uplink/Downlink screen, please see the manual for more details on this screen.
+Once the device has joined press the large push button in the center of the
+device to send the uplink payload.
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/console-output.png')}/>
-
-
+<img
+  src={useBaseUrl(
+    "img/use-the-network/devices/ready-to-use/console-output.png"
+  )}
+/>
