--- a/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
+++ b/docs/use-the-network/devices/development/st-b-l072z-lrwan1/arduino.mdx
@@ -14,8 +14,12 @@ import TabItem from "@theme/TabItem";
 
 ## Introduction to Guide
 
-:::important Before we begin, please make sure you've followed the steps from
-this guide, which goes over some initial setup steps. :::
+:::important  
+
+Before we begin, please make sure you've followed the steps from
+this guide, which goes over some initial setup steps. 
+
+:::  
 
 ## Objective and Requirements
 
