remove bad links

--- a/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/arduino.mdx
+++ b/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/arduino.mdx
@@ -275,5 +275,5 @@ Now let's head back to [Helium Console](https://console.helium.com/) and look at
   )}
 />
 
-Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs [here](../../console/integrations/).
+Congratulations! You have just transmitted data on the Helium network! The next step is to learn how to use your device data to build applications, visit our Integrations docs here.
 
